--- a/LeNetLab/LeNet-Lab-Solution.ipynb
+++ b/LeNetLab/LeNet-Lab-Solution.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -125,14 +125,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "2\n"
      ]
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAH4AAAB6CAYAAAB5sueeAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAPYQAAD2EBqD+naQAAF05JREFUeJztnW1sY1l5x39P7DiO7cR5s/PmxEkmmWQyyWR2d4ZdWhZW\n3QooUilIFW+ttlBVLYVKlA8FoaIuhQpUUBFt6VZ8aJciXiqkUqAVMEAp0IWdHXZewkwymU0ymSST\n98QviWPHsePTD9f34iRONnbsOLPxX7qa8b3n3nPiv885z3me/3OuKKUo4uShpNANKKIwKBJ/QlEk\n/oSiSPwJRZH4E4oi8ScUReJPKIrEn1AUiT+hKBJ/QpE34kXk/SIyISIREbksIhfzVVcRmSMvxIvI\n24G/A54GHgIGgUsiUpeP+orIHJKPII2IXAZeUEp9IPlZgGngH5RSn855hUVkDHOuHygipcAjwCf1\nc0opJSI/BF6dpnwt8AbgHrCR6/a8gmEF2oBLSqmVTG/OOfFAHWACFnacXwC605R/A/CVPLTjpOD3\ngK9metNxsOrvFboBDzjuZXNTPohfBraA+h3n64H5NOWLw/vhkNX3l3PilVIx4CrwpH4uadw9Cfw8\n1/UVkR3yMccDfBb4oohcBa4AHwRswBfzVF8RGSIvxCulvp5cs38cbYi/AbxBKbWUj/qKyBx5Wcdn\n1ACRh9GmhiKywyNKqWuZ3nQcrPoiCoCcEy8iT4tIYscxnOt6ijgc8mXc3UKz4iX5OZ6neorIEvki\nPl405I438jXHd4nIjIiMi8iXRaQlT/UUkSXy0eMvA+8G7gCNwMeAn4pIn1JqPQ/1HTlKSkoQEUpK\nSoz/p0MikSCRSKCUMv49Lsg58UqpSykfb4nIFWASeBvwbK7rO2pYLBbcbjdut5v6+noaGhpwOp3b\nyogI4XCYhYUFFhYW8Pl8rKysEAqFiMfjxOOFN3nyNccbUEoFReQloDPfdR0FLBYLTU1N9Pb20t/f\nz7lz52hp+dVMpvd+n8/HzZs3GRoaYmxsDICtrS0ikcjJIF5EHGikfynfdeUaJpOJqqoqqqqqsNls\nWK1WampqOH36NKdPn6anp4eenh4aGxuNe0QEESEQCCAiWK1WKisrqaysZHJyktnZWebm5tja2mJr\na6tgw38+hBifAf4LbXhvBv4aiAFfy3Vd+UZZWRler5eenh6amppwuVy4XC7cbjcul4u6ujoqKiq2\n3aMTabVaaWlpweFw4Ha78Xq93Llzh2vXrrG6uko0GmVjY4Otra1C/Gl56fEeNGFALbAEPAc8lo1K\n5KihG2tms5nS0lJqamro6uri4sWLnDp1ipaWFtxuN1arFavVislkoqRk98JIKYXFYqG+vp76+npc\nLhctLS1UVlYSCoWYnZ3F7/cTj8dfOcQrpd6Z62ceBUQEm82G3W6noaGBlpYW2traOHPmDGfOnMHl\nchlDfmlpqUH6XhZ9KqxWK9XV1Xi9Xh5++GFMJhM3b97k1q1bRKPRI/jrdiPvc/yDgpKSEux2O3V1\ndXR3d3Px4kXOnTtHU1MTTU1NWK3Wbcu3gxCuo7y8nLKyMkpKSjCZTNTV1RGLxbh37x4rK4UZCDMm\nXkQeB/4CTVDZCLxFKfXtHWU+DvwRUAX8DPhTpdTY4ZubO+jk2e12qqurqampMUg+ffo0vb29tLe3\n43Q6cTgcmEymXc/Y2tratVbXfxypPxL9/+Xl5dTU1BCPx6msrKS0tLQAf7mGbHq8HS2+/i/AN3Ze\nFJEPA38GPIWmB/sbNE39GaXUZvZNzS303qdb6V1dXXi9XrxeL01NTTQ0NFBXV2f01HRIJBJsbm4a\nc/XW1hYmk8mwEcxmM2bzr75ik8lEWVkZDofDGEEKhYyJV0p9D/geGJKqnfgA8Aml1H8nyzyFprB9\nC/D17JuaO+g93eFw0NbWxtmzZxkYGKC1tZXW1lacTqexfNsJvWcnEglWV1fx+/2EQiE2NzeJxWKU\nl5cbz66oqNhm9ZeUlFBaWorVasVsNj9YxO8HEWkHGoD/0c8ppVZF5AU0Tf2xIN5kMuHxeIwhvbe3\nl+7ubqqqqnA6nQYx6ZBIJIhGo0SjUcbGxrh16xb37t0jHA4TDodpbGykubmZ1tZWOjo6cDgcGdkD\nR4VcG3cNgCK9pr4hx3VlDZ34V73qVZw7d47Ozk68Xq8xH+9HlFKKaDRKKBRibGyMH//4x8baPBgM\n0t3dTV9fH+fPn6eiooK2traj+8MywImy6p1OJ01NTbS2tnLx4kXOnj2L1+uluro6raGV2rv1Yd3n\n87GwsMDi4iJDQ0OMjo6yvLxMJBIhHA6zsbFBNBolHo+TSCR2/Yh0o7LQo0CuiZ9HE1/Us73X1wPX\nc1xXxqiurmZgYICLFy/S3d1Nd3c3tbW1aedy0IgPh8MEg0EmJye5e/cud+/eZWJigomJCXw+nzHH\nH8QRU2iyU5FT4pVSEyIyj6a++SWAiFQCjwL/lMu6DgK9ZzkcDux2O52dnfT393PhwgUaGxtpbGxM\nS3oikSAejxMOh7l//z5TU1OMjY0xOjrK2NgYk5OTTE5OHotgS7bIZh1vRwu66D/fDhEZAHxKqWng\nc8BHRWQMbTn3CeA+8K2ctPjg7TSsaK/XS1dXF/39/fT19dHa2orD4djTgNvc3CQUCrG4uMj169e5\ncuUK9+/fZ3FxkZWVFQKBAIlEIuM2Pejx+AvA/6IZcQotDx7g34A/VEp9WkRswBfQHDj/B/zWUa/h\nRQSTyWQQ/9hjjzEwMEBnZ+e2MGo6MqLRKMFgkJmZGW7cuMGlS5dYWloy1uwHhVJq1/P1c4X+EWSz\njv8JLyPZUkp9DE15UzCYzWYqKipwOp00NzfT0dFBc3Nz2mha6tAeDoeZmppidHSU27dvMzIyQigU\nIhaLZdXLjytesVZ9aWkpDocDl8uFx+Oho6MDj8dDWVnZtnJKKeLxONFoFL/fz/LyMsPDw7zwwgsM\nDg6yuLhoKGcK3UtziYxdRyLyuIh8OymmTIjIm3dcfzaNrv47uWvygdpIeXk5DQ0NdHZ20tzcTG1t\nLQ6HY9eyTZdIjY2NcfPmTX7xi19w7do1hoaGmJiYYGVlhc3NzQOTrk8x6UK2qaNLoTV4OffVJ/Fd\nNMGlbgAeWexRN+ocDgder5fz58/j8Xj2XLIFg0FjWB8fH2dsbIy5uTkWFxcJh8MZq2R0u6K0tDQt\n8fF4nM3NzYKqbyA/vnqAaKF09WazGYvFQk1NDW1tbfT19dHU1LRriNextrbG+Pg4L774IiMjI4yM\njLC+nr0Y2Gw2Y7PZsNlsWCyWbWv3ra0tNjY2CIVCbGxsFNRmyNcc/4SILAB+4EfAR5VSvjzVtQ36\nnN7X10d3dzetra1UVVXtGQKNxWKEQiH8fj/hcPjQZNTW1tLd3c3Zs2dxuVzbrumG4/DwMNPT04TD\n4UPVdRjkg/jvAv8BTACngE8B3xGRV6sjGNvcbje9vb2cP3/eIF4PlaZDLBZjbW0Nn89nDO2HQW1t\nLT09PfT29u7q8evr60xOTnL16lWmpqaIRCKHquswyIf0KjUCNyQiN4Fx4Am09X9eUVFRQXNzMx6P\nh5qaGsrLy7ddFxESiQQ+nw+fz8fo6CjT09MsLy+zvr6eUY/XPYPl5eWGEPPMmTM0NDRQUVFhzOF6\nrH59fZ2VlRXm5uYIBoMF9fwdha5+QkSW0bx9eSfebrcbJNhstm3X9N6XSCSYmZlhaGiIa9euMT4+\nztLSEtFoNKMer4s5qqurOXfuHI888ggPPfQQtbW1Rl2py8X19XXW1tYIBoNEIpGCCS3haHT1HjTF\n7Vwe68BsNmMymaisrMTtdlNbW7uL+K2tLeLxuDHkXr9+nZs3bzI9PU0wGMy4Xt0lXFlZyenTp3n8\n8cfxeDy7Mms2NzdZW1sjEAgYxwNH/H6++uTxNNocP58s97fAS8Cl3U/LDSwWi5H40NzcjNvtxul0\n7rLkw+EwS0tLzM7OMjw8zPDwMJOTk6yurmZVry7FttlsVFdX09jYaBiSqebM2toaMzMzTE1NMTc3\nx8rKyoNHPPv76t8HnEPT21UBs2iE/1VyN6y8wGKxUFtbi8fjobm5GZfLhdPp3GXQra+vc//+fUZG\nRgziFxYWsp5r9R5fXl5OVVUVDQ0N2Gw2SkpKdhE/Ozu7jfgHzoFzAF/9G7NvTnawWq00NzcbeWwV\nFRVpNW26Bb+0tGTMs5l45XToqtmamhpDwlVfX2/o7XciGAwyPT3N5OQkgUCgoD1dxyvCV19eXo7H\n4+H8+fNGyDWdhEqf3wOBAOFwOCv/u+6SNZvNuFwuenp66O/vp76+Pi3poBE/NTXF1NRUVrZEPpCR\nr15EPiIiV0RkVUQWROQ/ReR0mnIfF5FZEQmLyA9EJG+Zsvpyyu1209HRgcvlMiTRImL4x/VM1eXl\nZWZmZggEAsRimc0+uhHpdDppbGyko6OD3t5eenp6cLlc235oumwrFArh8/mYnZ1lcXHxUF7BXCLT\nIM3jwD+iKWp+EygFvi8ixmI5RVf/x8CrgHU0Xb0lJy1OgW5cWSwWbDYblZWVRk5bKhKJBLFYzJBQ\nDQ0NMTc3x+bmwSUCek+32+20t7fz6KOPcuHCBfr6+mhvb6e6unrb1BKLxfD7/UxNTTE/P79Nhn0c\nkNFQr5R6U+pnEXk3sIiWVfNc8vSR6ep146qsrAybzUZFRUVa4re2ttjc3CQQCBjEZzOv7yRel2U3\nNjbumlZisRg+n4/p6Wnm5+fx+XwPLvFpUIVm2fvg6HX1TqcTt9vNqVOncLvd2O12LBbLtp6nlGJp\naYmZmRleeuklVlZWDkx6SUmJEXCpra2lrq6OlpYWzp8/T29vL83NzYY9oUNX287OzvLLX/6SwcFB\nbt++zfLyshGVOw7ImvhkZO5zwHNKKX0fuyPV1VdVVdHW1sapU6eor6/HZrPtioMrpVhcXGR4eJg7\nd+7g8x08VmQymaioqMDlctHR0WFsiHDq1Ck6OzuNVKhUhMNhlpeXmZiY4OrVq/zkJz8xdHrRaPTY\niDkO0+OfAXqBX89RWzJGWVkZTqeT6upq7HY7paWlaSXMsViMSCTCxsbGvmt23fdeVlaG1WrF6XTS\n1tZGe3u7QXZ7e7uR854u8LOyssLt27e5ceOGsQ2KrtU7LqRDlsSLyOeBNwGPK6VSXbEF1dWnI13P\nk3O5XNTW1u4K2qRCNxZ1L5zX66W/v5/+/n4aGhqorq7G6XRit9v3zHu7f/8+P/vZz7hy5QozMzPH\nQnSRDtm4bD8P/A7wOqXUVOq1o9bVK6W27SWjlEqbuaJvR+J2u6msrEwryhARSktLjV2turq6OHv2\nLI8++iiPPfYYDodjT3VsaiLl1NQUzz//PJcvX871n5tTZES8iDwDvBN4M7AuIvpbKIJKKf1NCUem\nqw8EAty7dw+n00lHRwfr6+tpZU8VFRU0NTVx7tw5TCYT7e3taZ+nB3rq6uqM0K7H4zF87+mk0olE\nglAoxMzMDPfv32doaOjYOGn2Q6Y9/r1oxtuPd5x/D8ldrY5SVx8MBonFYtjtdgYGBlhfX09r4FVW\nVlJeXk5lZaWRLJmu5+pOH7vdjtPpNJaHZrM5bXldOLm6usqdO3e4cuUKw8PDBAKBXP+pOUem6/gD\nOXyOSlevJycGAgGCwSChUIiSkhIsFotheOlDuH7YbDbq6+v3nHP18larFYtlt89J181tbGwQCATw\n+/1MT09z7do1BgcHCy6pOigeaF+9rpaJRqOEw2FWV1exWCzY7fa05U0mE1ardVfYNF25vfzu8Xgc\nv9/P0tISExMTjI6OMj4+biRSrq6uFlRSdVA80MTrxp3e++bm5gzvmu7ISR3y9c8H3Xsm9cehG2+6\nDv/u3bvcvHmTGzduMDo6aki5jpv1vhcyNe4+ArwV6AEiaG+V+rBS6qWUMs8Cf7Dj1u/tdPfmEmtr\na9y+fRuz2czAwABbW1t4PB7sdvsuFU6m0AnXZVPz8/MMDg4yODjIxMQEU1NT+P1+IpHIA0M6ZN7j\n9SDNi8l7P4UWpDmjlEod3440oSIUCjEyMsLi4iKJRIKqqipjrX0Y4vURRTfgFhYWGB8f5/r16zz3\n3HMsLy8bGvkHiXTIT5AGjjihIhaLsbq6yubmJnfu3MHhcBAMBg1Fji7L2iupAravxUOhEIFAgNXV\nVcLhMJFIhIWFBebm5rh37x4jIyPMz8+zvr5OLBY7Nv73TJDTIE0KjjShQo99x+NxxsbGiEQiTE9P\n09XVRWdnJ52dnVit1n2JB81ij8ViLC0tMTo6aihmAoEACwsLzM7OsrCwYIRY9Ry4BxG5DtJAARIq\ndAlzPB5nbm6OQCDA8vIywWCQYDBoDMU1NTXbPHupzVFKGVuWTUxMGPvb+P1+w4pfXFx8IJwzB0HO\ngzSFTqiIx+NsbGwYW4X6/X4mJyd58cUX953vU92/fr+fhYUFQw0biURYX18v2L6z+UCugzS7cNQJ\nFXrPj0aj+Hw+xsfHX/YVIjuhz/W6Eva47GKRS+Q0SLNH+bwnVKSDPvc+iIbXUSBTseUzaC+qfxfJ\nIE3ysCav20Xk0yLyqIh4ReRJ4JvkOaGiiCywcyjb7wASaO+G33k8lbxuRcudn0d7r/ld4J8B1z7P\nfJhfJWcUj8yPhzPhUD9yGqRJhmaPPKGiiMxRfKnwCUWmc/x7RWRQRILJ4+ci8sYdZY4smaKI7JFp\nj58GPow2Lz+C5pX7loicgaNNpijikMjGMNhhnK0A70n+fxb4YMq1SrQo3tuKxt3xMu6ynuNFpERE\n3gHYgJ/vlUwB6MkURRwjZOPA6QOeR1u6rQFvVUrdEZFXo/0Cj/VLCorQkI3LdgQYAJzA7wJfEpHX\n5rRVReQdGQ/1Sqm4UuquUuq6UuovgUG0RMnUZIpU1CevFXGMkIt1fAlQppSaQCP4Sf1CSjLFz/e5\nP/1eo0UcFFl9f5lq7j6JFm+fAirQ/PavA16fLJJNMkVbRi0uYifa2L9jpUWmc7wbbZOjRiCIlib1\neqXUj4Bskykuof2A7qH594s4GKxopGcV/JJXUoy5iIOj6Ks/oSgSf0JRJP6Eokj8CUWR+BOKY0G8\niLxfRCZEJCIil0Xk4h7lnk7zoqPhlOv7vigpWWanXuAd+90ju1+upEQkdsANHjeTuoW1vcrv8/y8\n6h0KTryIvB1tI+SngYfQXMCXRKRuj1tuobmBG5LHa1Ku6S9Keh9awGhnXen0Ap9F80ekvSeJ7ybr\n/FHy/l/jYBs8XgbG0DKK3piu/I7n/z7wDrSNovOrdzhsPD4H8fzLwN+nfBY0b9+H0pR9GriWgTD0\nzTvO7asX2OOeZ4Fv7FFHXfKe1xykjj3K7/n8XOgdch6PzwVEpBTtl50aw1fAD9k7ht+VHJbHReTL\nItKyR7mddR1GL/BEcqgeEZFnRKQmef5AGzym1LFvrmHq8/Otdyj0xgh1gIn0MfzuNOUvo6Vf30Fz\nG38M+KmI9CmlXm534Gw3X9wzF5DMN3g8SK7hZ4E/QRsZ8qZ3KDTxGUEpleqXviUiV4BJtGH02TzV\nuVcu4DfJbIPHC2g/8pfLNRxGS0B5H5ovPi96h0Ibd8toCRlZxfCVUkG0L+kglm1O9ALJ8PMGmlH5\nhNp7g8dUvCZ5bmf5dM8fQ/teyKfeoaDEK+11JVfZHsOX5OeXDTWKiAON9JfNyzuEXmBnnc8C5WjG\n564NHtPU8QW0aekjO8vv8fyduYaH1TukxzGw6t8GhNHeY9ODFtJdIU3aFfAZ4LWAF21J9QO0Oa42\ned2OJgs7jzZH/nnyc0vy+oeSz/5toB9tuB5DMzB33ZN83qeTX64XTVcQRwshN6P1tnrAmtLG1Dr+\nHdhEk6V7dpZP8/yvoEnbRpPt+VSyvt/Yp/2jgCXj773QxCf/oPclv8wImpDzwh7lvoa21IugiUG+\nCrSnXH8d6fP7/jWlzMfQlkVhtFj2u/a6h925gGqPsk/taKdehy6BPmiu4WryiCTPfV8nfZ/2d2bz\nnRfj8ScUhTbuiigQisSfUBSJP6EoEn9CUST+hKJI/AlFkfgTiiLxJxRF4k8oisSfUBSJP6H4f6jp\nzT+tO2hnAAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAFsAAABZCAYAAABR/liSAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAABeBJREFUeJztnGuIVGUYx39/11XpBq63FhULb/RNa9WWwIQueAPzQ5GF\nFAS7RAsKBUUfMvskon4IJVwvERRZUJClFCEZEavtKlJt0moXS1s0M9KEdNt9+nDOmXZmZ3bGOWfe\nufj+YJkzc87Z99n/PPzPe3n2lZnhccOIcgdwPeHFdogX2yFebId4sR3ixXaIF9shscSWtFjS95JO\nSnohqaBqFRU7qJFUB/QADwCngU5glZl9l1x4tcXIGPfOB06a2Y8AkvYAK4CcYo/SaBvDjTGarEz+\n4TJX7YryXRdH7MnAr4PenwYWZF4kqQVoARjDDSzQfTGarEwO24GCrovj2dm+ySGeZGbtZtZkZk31\njI7RXPUTR+zTwNRB76cAv8ULp7aJI3YnMFPS7ZJGAY8Ce5MJqzYp2rPN7F9JbcAnQB2w28y6E4us\nBonzgMTM9gP7E4ql5vEjSId4sR0Sy0bKwZUl8wA4uGsHAH3WT73qUscAyyffVZ7g8lB1Yl9+5i/g\nf2Gj18HHf+6biVkwDGhY3uM4wtx4G3FI1WT2+ZZmAA7N3QrAiHAAW6+6tGOAjjnvMBAOZkecCc7N\n+KgVgFmtne6CzsBntkOqTuw+66fP+hnAGMCGHEfvM6/rXraN7mXbOPVKc9lirxobGd/eAcCdU9YA\nsPmx1wHY1Laa8FmYengemrsnZSmZFvPg0i5OvjkdgP6eH9wEH1J1mV3NFL1SUwy3qMGSms++ujjo\nb4/6eOgDr2f7PLqXbQMY0gevVx3N69oAGLezI5FYDtsBLtqFvIsHPrMdUjWenUm2jI6Y1drJon2P\nA0E3EEj38Lw5WBp8ZjukajM7H9FwPRrcDPbsoYt3bqhZsaVwBJnR9fM2cp1Qs5mdy0ae613IxM/P\nAdCf/daS4TPbITWZ2XWzZ7Bg0ilgqGd3nZvK2J4TZYmrpsSOJpnuX3KUjY1fADBA+ggyspdy4G3E\nIVWb2XWzZwBw9t4JfLUumAcZ4AgQWEeU0Zk20nzrT3wZLkREM4mu8JntkKqd9ZvZGRRpbmz8IuvM\nXtqIMce5lVPmJxJLYrN+kqZK+kzScUndktaEnzdI+lTSifB1bBKB1zJ5M1tSI9BoZkcl3QwcAR4C\nngQumNmG8F88xprZ88P9riQyO6obObBzOxAMWiJfTi3yorTjfOeixeCGIyOZdDAc8FzDKk6hmZ33\nAWlmvUBveHxJ0nGCQvgVwKLwsjeAg8CwYschEnntq28D6SPDYm0kOpdaaFheR/NAuLBQgiWza3pA\nSroNmAscBiaFX0T0hUzMcU+LpC5JXX1ciRdtlVNw10/STcB7wFozuygVNjgws3agHQIbKSZISLcN\nGL5uZATKueD7bO/dbG48lPVcqWcEC8psSfUEQr9lZu+HH58N/Tzy9XOlCbF2yJvZClJ4F3DczLYM\nOrUXeALYEL5+UJIIQ7IuAlC4Z8/68GkA7tjyB80LmwDoWL817b5SzwgWYiP3AKuBbyQdCz97kUDk\ndyU9BfwCPFyC+GqKqhnUpGr91qXX+uXr+hVSPhxNYE17qbjhe2Jdv0oh6v9GXbPBFpBpIwvXr0mt\nM44jv4DFinyt+LkRh1SNjVQyviKqAvFiO8SL7RAvtkO82A7xYjvEi+0QL7ZDvNgO8WI7xIvtEKdz\nI5J+By4D5501WjzjKTzOaWY2Id9FTsUGkNRlZk1OGy2CUsTpbcQhXmyHlEPs9jK0WQyJx+ncs69n\nvI04xJnYlbzX9jCVui9LOiPpWPizNFY7Lmyk0vfaHqZS9xHgbzPblEQ7rjI7tde2mV0For22KwIz\n6zWzo+HxJSCq1E0UV2Jn22s78T8mCTIqdQHaJH0taXfcgn9XYhe013a5yazUBV4DpgNzCGrUN8f5\n/a7Ervi9trNV6prZWTPrN7MBYAeBHRaNK7Ereq/tXJW6UUl0yErg2zjtOKn1q4K9tnNV6q6SNIfA\n8n4GWuM04keQDvEjSId4sR3ixXaIF9shXmyHeLEd4sV2iBfbIf8BPS5c50YPTo4AAAAASUVORK5C\nYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x106c8d278>"
+       "<matplotlib.figure.Figure at 0x2113a2850b8>"
       ]
      },
      "metadata": {},
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -347,7 +347,21 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Only call `softmax_cross_entropy_with_logits` with named arguments (labels=..., logits=..., ...)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-967bb02bb6da>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mlogits\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mLeNet\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mcross_entropy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msoftmax_cross_entropy_with_logits\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlogits\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mone_hot_y\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mloss_operation\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreduce_mean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcross_entropy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mAdamOptimizer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlearning_rate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mD:\\Python\\Miniconda3\\envs\\carnd-term1\\lib\\site-packages\\tensorflow\\python\\ops\\nn_ops.py\u001b[0m in \u001b[0;36msoftmax_cross_entropy_with_logits\u001b[0;34m(_sentinel, labels, logits, dim, name)\u001b[0m\n\u001b[1;32m   1576\u001b[0m   \"\"\"\n\u001b[1;32m   1577\u001b[0m   _ensure_xent_args(\"softmax_cross_entropy_with_logits\", _sentinel,\n\u001b[0;32m-> 1578\u001b[0;31m                     labels, logits)\n\u001b[0m\u001b[1;32m   1579\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1580\u001b[0m   \u001b[1;31m# TODO(pcmurray) Raise an error when the labels do not sum to 1. Note: This\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mD:\\Python\\Miniconda3\\envs\\carnd-term1\\lib\\site-packages\\tensorflow\\python\\ops\\nn_ops.py\u001b[0m in \u001b[0;36m_ensure_xent_args\u001b[0;34m(name, sentinel, labels, logits)\u001b[0m\n\u001b[1;32m   1531\u001b[0m   \u001b[1;32mif\u001b[0m \u001b[0msentinel\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1532\u001b[0m     raise ValueError(\"Only call `%s` with \"\n\u001b[0;32m-> 1533\u001b[0;31m                      \"named arguments (labels=..., logits=..., ...)\" % name)\n\u001b[0m\u001b[1;32m   1534\u001b[0m   \u001b[1;32mif\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mlogits\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1535\u001b[0m     \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Both labels and logits must be provided.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Only call `softmax_cross_entropy_with_logits` with named arguments (labels=..., logits=..., ...)"
+     ]
+    }
+   ],
    "source": [
     "rate = 0.001\n",
     "\n",
@@ -527,9 +541,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:carndp1]",
+   "display_name": "Python [carnd-term1]",
    "language": "python",
-   "name": "conda-env-carndp1-py"
+   "name": "Python [carnd-term1]"
   },
   "language_info": {
    "codemirror_mode": {
