implementing LeNet 98.9 percent accuracy

--- a/LeNetLab/LeNet-Lab.ipynb
+++ b/LeNetLab/LeNet-Lab.ipynb
@@ -22,11 +22,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
+      "\n",
+      "Image Shape: (28, 28, 1)\n",
+      "\n",
+      "Training Set:   55000 samples\n",
+      "Validation Set: 5000 samples\n",
+      "Test Set:       10000 samples\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "\n",
@@ -62,11 +79,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated Image Shape: (32, 32, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -91,11 +116,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAH4AAAB6CAYAAAB5sueeAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAPYQAAD2EBqD+naQAAER5JREFUeJztnXtsW9d9xz+/S0l8yBIfetgWqWcsyZQ7xbWcZMmSOlmT\nJiuwbAOGNF2HoN0fW5AO6PpPi2LFnLVAg6VY0G1Fh/6xpSv6GAqsW7ehqdsu2zojU5y5sSzH8ot6\ni3pQlkWK1IOUdPbHJRmaphyRIkNSvB/gAublufcc36/uefweh6KUwqDy0IrdAIPiYAhfoRjCVyiG\n8BWKIXyFYghfoRjCVyiG8BWKIXyFYghfoRRMeBH5tIiMiciaiAyKyH2FqssgewoivIh8DPhL4DTw\nQWAIOCMijYWozyB7pBBOGhEZBN5USn0m/lmAKeCvlVIv571Cg6ypyvcNRaQaGAC+kjinlFIi8nPg\nwQzlG4AngXFgPd/t2cdYgA7gjFLqZrYX5114oBEwAfNp5+eB3gzlnwS+W4B2VAqfAL6X7UWlMKsf\nL3YDypzxXC4qhPCLwBZwMO38QWAuQ3mje98bOT2/vAuvlIoB54EPJ87FJ3cfBt7Id30GuVGIMR7g\nFeBbInIeOAd8FrAB3ypQfQZZUhDhlVI/iK/Zv4TexV8AnlRKBQpRn0H2FGQdn1UDRE6gDw0GuTGg\nlPpltheVwqzeoAjkXXgROS0i22nH5XzXY7A3CjW5u4Q+i5f4580C1WOQI4USftOYyJU2hRrju0Vk\nRkR8IvIdEWktUD0GOVII4QeBT6Lb4J8HOoFfiEhtAeoyyJG8d/VKqTMpHy+JyDlgAngGeDXf9Rnk\nRsGXc0qpIHANOFLougx2T6Emd0lE5AC66N8udF3FQkQwmUxUVVXR0NBAU1MTtbW1bG1tsb29zcLC\nAgsLC6yurha7qUkKEYjxVeDf0Lt3N/DnQAz4fr7rKhU0TcNsNmO1Wjl27Bj3338/brebjY0NNjY2\nOHfuHIODg/tbeMCDHhjQAASAs8Cv5hIlUi6YTCYOHDiA0+nE6/Vy6tQpenp6CIfDhMNhgsEg77zz\nTrGbeRuFmNx9PN/3LFVEBBHBZrPh8Xg4cuQIXV1duFwuampq2N7eJhKJsLGxwfb2drGbexuGrX4P\niAiapiWF7+/vp6uri4aGBmpqatja2mJ1dZVoNFr+wovIIyLyr3EDzbaIPJ2hzJdExC8iqyLyMxHZ\nlzN6TdOoqamhrq4Oj8dDX18fHo+H2tpaotEo8/PzjIyM4Pf7WVtbK3ZzbyOXN74W3b/+AnCHT1dE\nPg/8MfCHwP1ABD2mvmYP7SxJTCYTZrOZ+vp63G43Xq8Xt9uNzWZjbW2NyclJzp8/z8TERElN7CCH\nMV4p9RPgJ5AMqUrnM8CXlVL/Hi/zHHqE7W8DP8i9qaVHdXU1VqsVu91OU1MTbreb6upqNjc3CQaD\nTE9Pc+XKFQKBAOvrpRVamNcxXkQ6gUPAfyTOKaVCwJtkiKkvd8xmMw6HA5fLhdVqRUQIh8PMzc0x\nNTXF7Owsi4uLhMNhNjdLy0GZ71n9IfTuP1NM/aE811V0zGYzdrsdp9OJzWZDRIhEIknh5+bmCAQC\nbG5ultzkruCWu/2Ipmlomsbhw4cZGBjg5MmTtLa2YjKZuHXrFjdu3ODKlSssLCwkRS92iFs6+RZ+\nDj344iC3v/UHgbfzXFdRSDXPtra28sADD/DQQw9ht9sxmUwsLS1x7do1RkZGCAQCJSk65HmMV0qN\noYufGlNfDzzAPomp1zSN2tpaGhsbcbvd3HPPPXR2duJwOFBKJcf4ubk5VlZWSlJ0yOGNj/vVj/Bu\nWFWXiNwLLCmlpoCvAV8UkRvo6T1fBqaBH+WlxUWmpqaG5uZm2tracLvdWK1Wtre32draYnNzk2g0\nSiwWIxaLldy4nkouXf1J4D/RJ3EKPQ8e4B+AP1BKvSwiNuCbgAP4H+A3lFLRPLS36FRXV9Pc3ExP\nT09yzb69vZ0UPXFsbm6ytbVV7ObuSC7r+P/mPYYIpdSLwIu5Nak0MZlMVFdXY7fbcbvd9PT00NLS\ngs1mY319nZmZmeS63e/3EwwG2djYKHazd8SY1e+SqqoqrFYrDoeDlpaWO4SfnJzk7bffTppoQ6FQ\nSb/xebfVi8irGeLqf5y/JheHuro62traOHr0KF1dXXg8HhwOB5qmEQ6HmZ6eZnh4mPHxcZaXl4lG\noyUtfC5vfMJW/3fAD3co8xp6wGViAli6fd4uaWpqor+/nxMnTnD06FEaGxuTHrjl5eVkNz83N1dy\nDplMFMJWD7CxX+LqEz73xsZG+vr6OHnyJC0tLTidTtbX1wmFQiwsLDA9PY3P5yMSiZSceTYThRrj\nHxWReeAW8DrwRaXUUoHqKhiapmGxWLBYLLhcLlwuF3a7Pfmmz8zMcPnyZYaGhvD5fCXpd9+JQgj/\nGvBPwBhwD/AS8GMReVCVqjVjB0QkOaFLCO9wOJLCT09P8+abb3Lu3DmmpqbY2Ngo6XE9lUKEXqW6\nXt8RkWHABzyKvv4veRKRNbW1tXR0dNDd3c2xY8c4fPgwNTU1RCIRFhcXGRsbw+fzMTExQSgUKpu3\nHd6H5ZxSakxEFtGtfWUhfCKyxm634/V6eeyxx+ju7sbj8STt8ZOTk/h8Pvx+P0tLS0Sj0ZI1z2bi\n/Yir96BH3M4Wuq58UVNTQ319PYcOHaK3t5f77ruPQ4cOYbFYWFtbY3FxkatXrzI+Ps7CwgLhcLjY\nTc6avNrq48dp9DF+Ll7uL9Azac7cebfSxOFw0N3dTV9fH11dXdjtdqqqqojFYgSDQfx+P9evX8fv\n95dcSNVuybet/gWgH3gO3U7vRxf8z+K7YZUFDoeDnp4eBgYG6OzsxG63o2kaq6urSeGvXbtWWcLv\nwlb/VO7NKR6aplFfX099fT09PT14vV56e3tpbm6mpqYmOZkbGRnh2rVrzM/PEwqFiMXK5u/5Ngxb\nfRyTyURjYyPt7e14vV68Xi/d3d1YrVZMJhOBQICLFy/y1ltvcfXqVQKBAKurq2VhrMlEVrZ6EfmC\niJwTkZCIzIvIP4tIT4ZyZRdXbzKZcLlcdHZ20tnZicfjoaGhARFheXmZqakpLl++zPDwMFNTU6ys\nrJSVwSadbJ00jwB/gx5R8zhQDfxURKyJAuUaV69pWtLl2tzcjNVqJRqN4vf7uXDhAsPDw4yOjiYj\na8pV8ARZdfVKqY+mfhaRTwIL6NuUn42fLsu4+sQY7/F4aGpqwmKxEI1GmZmZYWhoiEuXLuHz+Zid\nLZtV6V3Za8ydA31mvwTlGVdvsVhoamqio6ODtrY2PB4PTqcTTdMIBoNMTExw4cIFbty4QTAYLHZz\n80bOk7u4Z+5rwFmlVGIfu7KLq7darTQ3N9PZ2Ul7e3vSzy4ihEKhpPDlvHTLxF5m9d8A+oBfy1Nb\n3lcS9ni73U57ezt9fX20tbXhcrnQNI2bN28yMTHB9PQ0s7OzLC8vF7vJeSWnrl5Evg58FHhUKZU6\n6KXG1aey0171RaOqqgqz2UxjYyO9vb0MDAzQ3t6OzWYjHA7j8/kYGhrC7/eX7ZLtbuQSevV14LeA\nx5RSk6nflUtcvYhQXV2NzWajubmZ3t5ejh8/jtvtxmw2EwqFGB0dZXh4mNnZ2bI10tyNrLp6EfkG\n8HHgaSAiIok3O6iUSqSDlnxcvclkoqWlhc7OTvr7+2ltbaWuro7t7W1u3bqF3+/H5/Nx/fp1FhcX\n9+Ubn+0Y/zz65O2/0s5/iviuVuUQV69pGi0tLRw/fjwp/IEDBwgGgwSDQWZmZpLCx2KxsgmuyIZs\n1/G7GhpKNa5e0zSqqqqoq6ujpaUFr9dLV1cXTqcTgKWlJcbGxhgbGytbd+tuqShbfVVVFbW1tTid\nTtxuN0eOHMHj8WC1WtnY2Egaa65fv77vZvHpVNTmR2azGZfLRWtrK62trbS3t+NyuQD9bZ+YmODS\npUuMjo7uK2NNJvLupCnlhAqn08m9997L448/ztGjR7FarSwvLzMyMsLZs2cZGhpidHSUhYWFsoiN\n3wvZdvUJJ83/xa99Cd1J41VKpT6pkkyocDqd9Pf388QTT9DU1ITNZmNiYoKRkREGBwe5cuUKo6Oj\nZRc4mQuFcNJAiSVUHDhwgNraWjweDx6Ph5aWFsxmM0opVlZWmJubY3Jysux97NmQVydNCo/Gh4Ir\nIvINEXHtsZ6cEZGkWbajo4ODBw9SX19PdXU1sViMcDjM0tJScha/H5dumci3kwZKLKEikRThdDpx\nOBxYLBYAwuEwoVCImZkZ5ufnuXnzJqurq/u+i0+QdydNqSVUKKXY3NxkbW2NUCjE4uIi09PTjI2N\nMT4+npzFr6yslOSes4UiJ+FTnDSPpDlp7qAUEipisRhra2sEg0ECgQDT09NcvHiR8+fPJ5MiQqFQ\nWSVE7JVc4uoTTppT6U6aHcoXNaFCKcXq6iqLi4v4fD62traYnJxkdHSU0dFRAoEAkUikokSHPDtp\n4skWJZdQEYlEiEajrKysMDMzg8ViIRKJEA6HWV9f35fet/dEKbXrA9hG/2349OO5+PcW9Nz5OfTf\nNR8F/hZouss9T/BucoZxZH+cyEbDxJFXJ03cNVuWCRWVRkXZ6g3eJVtb/fMiMiQiwfjxhog8lVam\n7JIpKpFs3/gp4PPo4/IA+jYnPxIRL5RvMkVFksvEIG1ydhP4VPzffuCzKd/VA2vAM8bkrrQmdzmP\n8SKiicizgA14oxyTKSqZXAw4HwD+F33ptgL8jlLqqog8iP4XWDbJFJVMLibbK8C9gB34XeDbIvKh\nvLbKoOBk3dUrpTaVUqNKqbeVUn8KDKEnSpZNMoVBftbxGmDeQzKFJQ9tqGRyen7Z2uq/gu5vnwTq\ngE8Ap4CPxIvkkkzRkVWLDdLpIIcspWzH+Gb0TY4OA0HgIvARpdTrQK7JFGfQ/4DG0e37BrvDgi56\nTs4vqTR3pIGOYauvUAzhKxRD+ArFEL5CMYSvUEpCeBH5tIiMiciaiAyKyH07lDudIS/vcsr3d/2h\npHiZ9HiBZ+92TYZcQCUisV1u8BiNxy2sZJFrmLh/QeMdii68iHwMfSPk08AH0U3AZ0SkcYdLLqGb\ngQ/Fj4dTvkv8UNIL6A6j9LoyxQu8gm6PyHhNnNfidb4ev/4hdrfB4yBwA/0nWp7KVD7t/r8PPIu+\nUXRh4x326o/Pgz9/EPirlM+Cbu37XIayp4FfZhEY+nTaubvGC+xwzavAD3eoozF+zcO7qWOH8jve\nPx/xDnn3x+cDEalG/8tO9eEr4Ofs7MPvjnfLPhH5joi07rKuvcQL7JQLmO0Gj7vONSx0vEOxd8Ro\nBExk9uH3Zig/iJ5+fRXdbPwi8AsR+YBSKvIedeW6+eKOuYBkv8HjbnINXwH+CL1nKFi8Q7GFzwql\nVKpd+pKInAMm0LvRVwtU5065gP9Cdhs8nkT/I3+vXMPL6AkoL6Db4gsS71Dsyd0iekJGTj58pVQQ\n/SHtZmabl3iBuPt5HX1S+aja3QaPD8fPpZfPdP8b6M+FQsY7FFV4pf9cyXlu9+FL/PN7uhpF5AC6\n6O+Zl7eHeIH0Ol8FrOiTz91s8PhN9GHpC+nld7h/eq7hXuMdMlMCs/pngFX037E5iu7SvUmGtCvg\nq8CHgHb0JdXP0Me4hvj3tehhYcfRx8g/iX9ujX//ufi9fxP4FfTu+gb6BPOOa+L3ezn+cNvR4wo2\n0V3IbvS37SBgSWljah3/CETRw9I96eUz3P+76KFt1+PteSle36/fpf3XgZqsn3uxhY//h16IP8w1\n9EDOkzuU+z76Um8NPRjke0BnyvenyJzf9/cpZV5EXxatovuyf2+na7gzF1DtUPa5tHYm6kiEQO82\n1zAUP9bi536aEP0u7T+SyzM3/PEVSrEndwZFwhC+QjGEr1AM4SsUQ/gKxRC+QjGEr1AM4SsUQ/gK\nxRC+QjGEr1D+H2LLL2IJMMJjAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x106c50320>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import random\n",
     "import numpy as np\n",
@@ -123,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -200,7 +243,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.contrib.layers import flatten\n",
+    "EPOCHS = 10\n",
+    "BATCH_SIZE = 128\n",
+    "from tensorflow.contrib.layers import flatten\n",
+    "\n",
+    "# Arguments used for tf.truncated_normal, randomly defines variables for the weights and biases for each layer\n",
+    "mu = 0\n",
+    "sigma = 0.1\n",
+    "def reluLayer(input, shapeForNormalWeight, sizeOfBiasArray, ):\n",
+    "    conv_W = tf.Variable(tf.truncated_normal(shape=shapeForNormalWeight, mean = mu, stddev = sigma))\n",
+    "    conv_b = tf.Variable(tf.zeros(sizeOfBiasArray))\n",
+    "    conv   = tf.nn.conv2d(input, conv_W, strides=[1, 1, 1, 1], padding='VALID') + conv_b\n",
+    "    return tf.nn.relu(conv)\n",
+    "\n",
+    "def xwplusb(inpputLayer, inputSize, outputSize):\n",
+    "    fc_W = tf.Variable(tf.truncated_normal(shape=(inputSize, outputSize), mean = mu, stddev = sigma))\n",
+    "    fc_b = tf.Variable(tf.zeros(outputSize))\n",
+    "    return  tf.matmul(inpputLayer, fc_W) + fc_b "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -211,32 +283,26 @@
     "def LeNet(x):    \n",
     "    # Arguments used for tf.truncated_normal, randomly defines variables for the weights and biases for each layer\n",
     "    mu = 0\n",
-    "    sigma = 0.1\n",
-    "    \n",
+    "    sigma = 0.1  \n",
     "    # TODO: Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
-    "\n",
-    "    # TODO: Activation.\n",
-    "\n",
+    "    layer1OutPut = reluLayer (x, (5,5,1,6), 6 )\n",
     "    # TODO: Pooling. Input = 28x28x6. Output = 14x14x6.\n",
-    "\n",
+    "    layer1OutPut = tf.nn.max_pool(layer1OutPut, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
     "    # TODO: Layer 2: Convolutional. Output = 10x10x16.\n",
-    "    \n",
     "    # TODO: Activation.\n",
-    "\n",
+    "    layer2OutPut = reluLayer (layer1OutPut, (5,5,6,16), 16)\n",
     "    # TODO: Pooling. Input = 10x10x16. Output = 5x5x16.\n",
-    "\n",
+    "    layer2OutPut = tf.nn.max_pool(layer2OutPut, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
     "    # TODO: Flatten. Input = 5x5x16. Output = 400.\n",
-    "    \n",
+    "    fc0   = flatten(layer2OutPut)\n",
     "    # TODO: Layer 3: Fully Connected. Input = 400. Output = 120.\n",
-    "    \n",
     "    # TODO: Activation.\n",
-    "\n",
+    "    fc1 =tf.nn.relu(xwplusb (fc0, 400, 120))\n",
     "    # TODO: Layer 4: Fully Connected. Input = 120. Output = 84.\n",
-    "    \n",
-    "    # TODO: Activation.\n",
-    "\n",
+    "     # TODO: Activation.\n",
+    "    fc2 =tf.nn.relu(xwplusb (fc1, 120, 84))\n",
     "    # TODO: Layer 5: Fully Connected. Input = 84. Output = 10.\n",
-    "    \n",
+    "    logits =xwplusb (fc2, 84, 10 )\n",
     "    return logits"
    ]
   },
@@ -255,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -278,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -305,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -344,11 +410,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training...\n",
+      "\n",
+      "EPOCH 1 ...\n",
+      "Validation Accuracy = 0.970\n",
+      "\n",
+      "EPOCH 2 ...\n",
+      "Validation Accuracy = 0.974\n",
+      "\n",
+      "EPOCH 3 ...\n",
+      "Validation Accuracy = 0.983\n",
+      "\n",
+      "EPOCH 4 ...\n",
+      "Validation Accuracy = 0.986\n",
+      "\n",
+      "EPOCH 5 ...\n",
+      "Validation Accuracy = 0.989\n",
+      "\n",
+      "EPOCH 6 ...\n",
+      "Validation Accuracy = 0.987\n",
+      "\n",
+      "EPOCH 7 ...\n",
+      "Validation Accuracy = 0.989\n",
+      "\n",
+      "EPOCH 8 ...\n",
+      "Validation Accuracy = 0.985\n",
+      "\n",
+      "EPOCH 9 ...\n",
+      "Validation Accuracy = 0.986\n",
+      "\n",
+      "EPOCH 10 ...\n",
+      "Validation Accuracy = 0.988\n",
+      "\n",
+      "Model saved\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
@@ -388,11 +494,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy = 0.989\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as sess:\n",
     "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
@@ -400,14 +514,23 @@
     "    test_accuracy = evaluate(X_test, y_test)\n",
     "    print(\"Test Accuracy = {:.3f}\".format(test_accuracy))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [carndp1]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [carndp1]"
   },
   "language_info": {
    "codemirror_mode": {
